# ccacards

./: pyproject.toml
ccacards/: __init__.py  card.py  deck.py  pack.py  stack.py
doc/: card.md
scripts/: update-versions.sh
tests/: test_card.py  test_ccacards.py  test_deck.py  test_pack.py  test_pile.py  test_stack.py
