[tool.poetry]
name = "ccacards"
version = "0.1.4"
description = "GTK based playing cards"
authors = ["ccdale <chris.charles.allison+git@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ccaerrors = "^0.1.2"
ccalogging = "^0.5.3"
platformdirs = "^4.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
